Flex Files added

--- a/index.html
+++ b/index.html
@@ -10,56 +10,50 @@
   </head>
 
   <body>
+    <a href="flex.html"> <button>See Flex Button</button></a>
+
     <h1 id="top_heading">Tourism in Pakistan</h1>
 
     <div class="trip_header_div">
-
       <h1>Tours for Everywhere. Find Now!</h1>
       <p>Explore from 900 tour packages in Paksitan and abroad.</p>
-      <input placeholder="Where ?"  type="search"/>
+      <input placeholder="Where ?" type="search" />
       <p>Find on a location such as Dubai, Turkey, Naran, Hunza etc.</p>
-
     </div>
-    <!-- <div class="box_image"> -->
-
+    <div class="box_image">
       <img
-      class="card_image"
-      src="https://images.unsplash.com/photo-1657643114908-ac3f278e32e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8UGFraXN0YW4lMjBNbW91bnRhaW5zfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
-      alt=""
-    />
-    <!-- </div> -->
+        class="card_image"
+        src="https://images.unsplash.com/photo-1657643114908-ac3f278e32e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8UGFraXN0YW4lMjBNbW91bnRhaW5zfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
+        alt=""
+      />
+    </div>
 
     <div class="box">
-
-      <div class="box-child">
-
-      </div>
+      <div class="box-child"></div>
     </div>
 
-    <!-- <div class="parent">
+    <div class="parent">
       <div class="child1">
         <h4>Tour Company</h4>
         <p>
-          
-            We are tour compansdta bkjagdjask gdhjsag djkasg dhjkas
-            gdhjkasdhjkas gdhjkas dhjkas gdhjkasdhjkas gdhjkas dhjkas gdhjkas
-            dhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas
-            dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas
-            gdhjkas dhjkas gdhjkas gdhjkas We are tour compansdta bkjagdjask
-            gdhjsag djkasg dhjkas gdhjkasdhjkas gdhjkas dhjkas gdhjkasdhjkas
-            gdhjkas dhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas
-            gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas
-            gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas We are tour
-            compansdta bkjagdjask gdhjsag djkasg dhjkas gdhjkasdhjkas gdhjkas
-            dhjkas gdhjkasdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas dhjkas
-            gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas
-            dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas
-            gdhjkas
+          We are tour compansdta bkjagdjask gdhjsag djkasg dhjkas gdhjkasdhjkas
+          gdhjkas dhjkas gdhjkasdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas
+          dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas
+          gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas
+          gdhjkas gdhjkas We are tour compansdta bkjagdjask gdhjsag djkasg
+          dhjkas gdhjkasdhjkas gdhjkas dhjkas gdhjkasdhjkas gdhjkas dhjkas
+          gdhjkas dhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas
+          gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas
+          dhjkas gdhjkas dhjkas gdhjkas gdhjkas We are tour compansdta
+          bkjagdjask gdhjsag djkasg dhjkas gdhjkasdhjkas gdhjkas dhjkas
+          gdhjkasdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas
+          dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas dhjkas
+          gdhjkas dhjkas gdhjkas gdhjkas dhjkas gdhjkas dhjkas gdhjkas gdhjkas
         </p>
         <a href="booktour/index.html">
           <button>Book Your Tour</button>
         </a>
-      </div> -->
+      </div>
 
       <div class="child2">
         <video
@@ -74,7 +68,7 @@
         >
           <p>A video of a puppy playing in the snow</p>
         </video>
-        <!-- <iframe
+        <iframe
           width="300"
           height="200"
           src="https://www.youtube.com/embed/1j9wYgK88hM"
@@ -82,11 +76,11 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
-        ></iframe> -->
-        <!-- <img
+        ></iframe>
+        <img
           class="landing_image"
           src="https://images.unsplash.com/photo-1657643114908-ac3f278e32e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8UGFraXN0YW4lMjBNbW91bnRhaW5zfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
-        /> -->
+        />
       </div>
     </div>
 
