--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul>
           <li>
             <a href="flex.html"
-              ><i class="fa-solid fa-bus"></i> Tour Packages
+              ><i class="fa-solid fa-bus"></i> Packages
             </a>
           </li>
           <li>
