--- a/Functions/index.html
+++ b/Functions/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Functions</h1>
-    <div>
+    <!-- <div>
         <label>Biryani Price</label>
         <input id="biryani" type="number" placeholder="Biryani Rate">
         <br />
@@ -34,7 +34,22 @@
         <button onclick="getTotalAmount()">See Amount</button>
         <br>
         <h2 id="total">Total Amount : </h2>
+    </div> -->
+
+
+    <h3>Calculate Area of Reactangle</h3>
+    <div>
+        <label for="">Height</label> <input type="number" id="height">
     </div>
+
+    <div style="margin-top: 20px;">
+        <label for="">Width</label> <input type="number" id="width">
+    </div>
+    <div style="margin-top: 20px;">
+        <button onclick="calculateRectangleArea()">Calculate</button>
+    </div>
+
+    <h2 id="area">Area : </h2>
     <script src="index.js"></script>
 </body>
 
