--- a/Events/index.html
+++ b/Events/index.html
@@ -6,20 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <h2>Events</h2>
 
     <!-- On Click Event -->
-    <button onclick="sayHelloWorld()">Learn On Click</button>
+    <!-- <button onclick="sayHelloWorld()">Learn On Click</button> -->
 
     <!-- on mouse over -->
-    <div onmouseover="this.style.backgroundColor = 'orange'" onmouseout="this.style.backgroundColor = 'red'"
-        style="background-color: red; padding: 20px; display: inline-block;">
 
-        <img src="dice.avif" onmouseover="src='giphy.gif'" onmouseout="src = getImageName()" />
+    <!-- <button id="plus">+</button>
+    <span id="num">0</span>
+    <button id="minus">-</button> -->
+
+
+    <!-- example -->
+    <button>Click on Button</button>
+    <h1>Color</h1>
+ 
+    <div class="box">
+ 
     </div>
+    <!-- <div id="box" class="box">
+
+    </div> -->
+    <!-- dice -->
+    <!-- <div class="scene">
+            <div class="cube">
+                <div class="cube__face cube__face--1">1</div>
+                <div class="cube__face cube__face--2">2</div>
+                <div class="cube__face cube__face--3">3</div>
+                <div class="cube__face cube__face--4">4</div>
+                <div class="cube__face cube__face--5">5</div>
+                <div class="cube__face cube__face--6">6</div>
+            </div>
+        </div> -->
+    <!-- end -->
+
+    <!-- <span class="form-control col-2" id="q4OP"></span>
+    <button type="button" class="btn btn-outline-primary rollBtn" onclick="rollDice()">Roll
+        Dice</button> -->
+
 
 
     <script src="index.js"></script>
