take and give value to input

--- a/Events/index.html
+++ b/Events/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<body>
+  <body>
     <h2>Events</h2>
 
     <!-- On Click Event -->
@@ -21,14 +20,13 @@
     <span id="num">0</span>
     <button id="minus">-</button> -->
 
-
     <!-- example -->
-    <button>Click on Button</button>
+    <!-- <button>Click on Button</button>
     <h1>Color</h1>
  
     <div class="box">
  
-    </div>
+    </div> -->
     <!-- <div id="box" class="box">
 
     </div> -->
@@ -49,9 +47,14 @@
     <button type="button" class="btn btn-outline-primary rollBtn" onclick="rollDice()">Roll
         Dice</button> -->
 
-
+<input id="first"  placeholder="First Name" />
+    <br />
+    <br />
+    <input id="last" placeholder="Last Name" />
+    <br />
+    <br />
+    <button id="submit" >Submit</button>
 
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
