Rich text updated

--- a/Events/index.html
+++ b/Events/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
 
-  <body>
-    <h2>Events</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <!-- <h2>Events</h2> -->
+
+    <button id="boldBtn">B</button>
+    <br>
+    <br>
+    <textarea id="txtArea" rows="6" cols="20">
+        Hello we are learning text editor
+    </textarea>
 
     <!-- On Click Event -->
     <!-- <button onclick="sayHelloWorld()">Learn On Click</button> -->
@@ -19,6 +27,7 @@
     <!-- <button id="plus">+</button>
     <span id="num">0</span>
     <button id="minus">-</button> -->
+
 
     <!-- example -->
     <!-- <button>Click on Button</button>
@@ -47,14 +56,9 @@
     <button type="button" class="btn btn-outline-primary rollBtn" onclick="rollDice()">Roll
         Dice</button> -->
 
-<input id="first"  placeholder="First Name" />
-    <br />
-    <br />
-    <input id="last" placeholder="Last Name" />
-    <br />
-    <br />
-    <button id="submit" >Submit</button>
+
 
     <script src="index.js"></script>
-  </body>
+</body>
+
 </html>
