--- a/Objects/index.html
+++ b/Objects/index.html
@@ -11,9 +11,23 @@
 
 <body>
     <h1>Objects</h1>
-    <div style="display: flex; flex-wrap: wrap;margin: 10px;" id="container">
 
-    </div>
+        <table>
+            <tr>
+                <th>No</th>
+                <th>Name</th>
+                <th>Maths</th>
+                <th>English</th>
+                <th>Science</th>
+                <th>Total</th>
+                <th>Percentage</th>
+            </tr>
+        </table>
+        
+        <h4>Show Top 3 Students</h4> 
+        <h4>1 Student Name</h4> 
+        <h4>2 Student Name</h4> 
+        <h4>3 Student Name</h4> 
     <script src="index.js"></script>
 </body>
 
