--- a/Objects/index.html
+++ b/Objects/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Objects</h1>
 
-        <table>
+        <table id="chart">
             <tr>
                 <th>No</th>
                 <th>Name</th>
@@ -22,12 +22,13 @@
                 <th>Total</th>
                 <th>Percentage</th>
             </tr>
+           
         </table>
         
         <h4>Show Top 3 Students</h4> 
-        <h4>1 Student Name</h4> 
-        <h4>2 Student Name</h4> 
-        <h4>3 Student Name</h4> 
+        <h4 id="first">1 Student Name </h4> 
+        <h4 id="second">2 Student Name</h4> 
+        <h4 id="third">3 Student Name</h4> 
     <script src="index.js"></script>
 </body>
 
