--- a/ES6/arraymethods/index.html
+++ b/ES6/arraymethods/index.html
@@ -14,6 +14,6 @@
     <div id="container" style="display: flex ;flex-wrap: wrap;justify-content: space-around;">
 
     </div>
-    <script src="hoc.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
