--- a/Firebase/index.html
+++ b/Firebase/index.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<body>
-
-    <div id="loader" style="height: 100vh; width: vh; display: flex; justify-content: center; align-items: center;">
-        <img height="200px" width="200px" src="https://i.gifer.com/origin/d3/d3f472b06590a25cb4372ff289d81711_w200.gif"
-            alt="">
+  <body>
+    <div
+      id="loader"
+      style="
+        height: 100vh;
+        width: vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <img
+        height="200px"
+        width="200px"
+        src="https://i.gifer.com/origin/d3/d3f472b06590a25cb4372ff289d81711_w200.gif"
+        alt=""
+      />
     </div>
 
-    <div style="display: none;" id="content_container">
-        <h2>User Content Info</h2>
-        <button id="logout">logout</button>
+    <div style="display: none" id="content_container">
+      <h2>User Content Info</h2>
+      <table id="users_table"></table>
+      <button id="logout">logout</button>
     </div>
 
-    <div style="display: none;" id="login_container">
-        <h2>Register User</h2>
+    <div style="display: none" id="login_container">
+      <h2>Register User</h2>
 
-        <label>Email <input type="text" id="email"></label>
-        <label>Password <input type="password" id="password"></label>
-        <button id="register_btn">Register</button>
+      <label>Name <input type="text" id="name" /></label> <br />
+      <label>Father Name <input type="text" id="fatherName" /></label> <br />
+      <label>Email <input type="text" id="email" /></label> <br />
+      <label>Password <input type="password" id="password" /></label> <br />
+      <button id="register_btn">Register</button>
 
+      <h2>Login User</h2>
 
-        <h2>Login User</h2>
-
-        <label>Email <input type="text" id="email_log"></label>
-        <label>Password <input type="password" id="password_log"></label>
-        <button id="login_btn">Login</button>
+      <label>Email <input type="text" id="email_log" /></label>
+      <label>Password <input type="password" id="password_log" /></label>
+      <button id="login_btn">Login</button>
     </div>
-
 
     <script src="index.js" type="module"></script>
-</body>
-
+  </body>
 </html>
