fetch products from API

--- a/Firebase/index.html
+++ b/Firebase/index.html
@@ -29,7 +29,9 @@
 
     <div style="display: none" id="content_container">
       <h2>User Content Info</h2>
-      <table id="users_table"></table>
+      <div id="container-products"></div>
+      <button id="loadMore" class="load_more">Load More</button>
+
       <button id="logout">logout</button>
     </div>
 
