search work done

--- a/Firebase/index.html
+++ b/Firebase/index.html
@@ -29,6 +29,10 @@
 
     <div style="display: none" id="content_container">
       <h2>User Content Info</h2>
+      <div style="display: flex; justify-content: center">
+        <input type="search" id="search_input" />
+        <button id="search">search</button>
+      </div>
       <div id="container-products"></div>
       <button id="loadMore" class="load_more">Load More</button>
 
