--- a/Firebase/mypost.html
+++ b/Firebase/mypost.html
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">All Posts</a>
+              <a class="nav-link" aria-current="page" href="index.html">All Posts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mypost.html">My Posts</a>
+              <a class="nav-link active" href="#">My Posts</a>
             </li>
 
           </ul>
@@ -53,13 +53,12 @@
 
     <div style="display: grid; grid-template-columns: 1fr 2fr 1fr; min-height: 200px;">
       <div></div>
-      <div id="blog_container" ></div>
+      <div id="blog_container_personal" ></div>
       <div ></div>
     </div>
 
     <button id="logout">logout</button>
   </div>
-
   <div style="display: none" id="login_container">
     <h2>Register User</h2>
 
@@ -75,6 +74,7 @@
     <label>Password <input type="password" id="password_log" /></label>
     <button id="login_btn">Login</button>
   </div>
+  
 
   <script src="index.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
